--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "language-swift-89",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Comprehensive Swift syntax highlighting in Atom <3",
-  "engines": 
-  {
+  "engines": {
     "atom": "*"
   },
   "dependencies": {},
-  "repository": 
-  {
+  "repository": {
     "type": "git",
     "url": "https://github.com/kelvin13/atom-swift-89.git"
   },
-  "bugs": 
-  {
+  "bugs": {
     "url": "https://github.com/kelvin13/atom-swift-89/issues"
   },
   "license": "GPL3"
 }
-
-
